--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^18.0.0",
     "angular-cli-ghpages": "^2.0.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
